# prospector

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  LICENSE  README.md  bsfh_mult.py  bsfh_setup.py  bsfh_simplefsps.py  clustermodel.py  conda_install.sh  cspmodel.py  debug_lnprob.py  diagnostics.py  dust_curves.py  elines.py  environment.yml  fitsfh.py  fitterutils.py  gp.py  minimizer.py  modeldef.py  modelgrid.py  newmodel.py  observate.py  plotter.py  popsynth.py  priors.py  pyproject.toml  readspec.py  readthedocs.yml  recover_angst_sfh.py  recover_m32.py  requirements.txt  sedmodel.py  setup.py  sfhs.py  simplemodel.py  sps_basis.py  timings3.py  (+2 more)
.github/workflows/: release.yml  tests.yml
bsfh/: __init__.py  datautils.py  default_params.py  elines.py  fitterutils.py  gp.py  likelihood.py  loadspec.py  minimizer.py  model_setup.py  modeldef.py  parameters.py  priors.py  read_results.py  readspec.py  sedmodel.py  smoothing.py  sps_basis.py  starmodel.py  write_results.py
bsfh/fitting/: __init__.py  fitterutils.py
bsfh/io/: __init__.py  read_results.py  write_results.py
bsfh/likelihood/: __init__.py  likelihood.py
bsfh/models/: __init__.py  model_setup.py  (+3 more)
demo/: DeconstructedDemo.ipynb  Interactive Demo.ipynb  InteractiveDemo.ipynb  NestedDemo.ipynb  README.md  bsfh_mmt_gp_sbasis.py  bsfh_mmt_gp_sps.py  bsfh_newmodel.py  bsfh_simplefsps.py  demo_cluster_params.json  demo_cluster_params.py  demo_csphot_params.py  demo_dynesty_mock_params.py  demo_mock_params.py  demo_mpi_params.py  demo_multicsphot_params.py  demo_nestle_mock_params.py  demo_params.py  filter_keys_threedhst.txt  mock_params.py  mpi_hello_world.py  plot_utils.py  prosp_beta_tables.ipynb  prospector+cue.ipynb  prospector.py  prospectr.py  prospectr_params.json  prospectr_params.py  recover_angst_sfh.py  recover_hires_onez.py  tests.sh  timing.py  tutorial.rst
demo_fpho/: demo_params.py
detritus/: bsfh_mult.py
doc/: Makefile  advanced.rst  animate_nbands.html  api.rst  conf.py  dataformat.rst  demo.rst  faq.rst  index.rst  installation.rst  manual.tex  models.rst  nebular.rst  noise.rst  output.rst  prospector-beta_priors.rst  quickstart.rst  ref.rst  requirements.txt  sfhs.rst  spectra.rst  tutorial.rst  usage.rst
misc/: test_compsp.py  test_sft.py  test_stepsfh.py  timing_smoothspec.py  timings_pyfsps.py
prospect/: __init__.py  _version.py  argument_parser.py
scripts/: README_dust_visualization.md  build_dale2014_templates.py  build_dl2007_templates.py  build_dl2014_templates.py  build_themis_templates.py  compare_dl2007_dust_emission.py  compare_dl2007_implementations.py  prospector.py  prospector_dynest.py  prospector_dynesty.py  prospector_nest.py  prospector_parse.py  prospector_restart.py  test_dl2007_parameter_recovery.py  test_dust_model_self_consistency.py  visualize_dl2007_comparison.py  visualize_dust_templates.py
src/: attenuate.f90  combine_ssp.f90  extra_parameters.tex  fit_spectrum.f90  lnprob.f90  locate.f90  model.f90  position_to_params.f90  single_ssp.f90  template.f90  zinterp.f90
tests/: agn_test.py  test_agn.py  test_agn_eline.py  test_cosmology.py  test_cue_eline.py  test_dla.py  test_eline.py  test_io.py  test_lnlike.py  test_multispec.py  test_parameter_dependencies.py  test_parameters.py  test_polycal.py  test_predict.py  test_prior_data.py  test_priors.py  test_priors_beta.py  tests.py  tests_samplers.py  tests_smoothing.py  tests_undersampling.py  timing.py  timing_basis.py  timing_tests.py
text/: bsfh.tex  tbl_spec.tex
(+115 files in other folders)
